Moved arbitrator for the slice creation from VSMF to NSMF, then updated source code accordingly.

--- a/SEBASTIAN/NSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/NSFM_SERVICE/pom.xml
@@ -134,7 +134,18 @@
         <version>2.1</version>
         <scope>provided</scope>
 </dependency>
-
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>ARBITRATOR_SERVICE</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>TranslatorService</artifactId>
+            <version>0.0.2-EVE-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
