Started implementation of runtime arbitrator. Implemented and tested the bucketizing system of NSTs.

--- a/SEBASTIAN/VSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/VSFM_SERVICE/pom.xml
@@ -118,6 +118,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NsTemplatesCatalogue</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
