Supposed to have already advertized NSTs by NSP into DSP, the NSTs are bucketized into the designed bucket scenarios.

--- a/SEBASTIAN/NST_E2E_COMPOSER_SERVICE/pom.xml
+++ b/SEBASTIAN/NST_E2E_COMPOSER_SERVICE/pom.xml
@@ -78,7 +78,7 @@
 
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
-            <artifactId>NSTe2eComposer</artifactId>
+            <artifactId>NST_E2E_COMPOSER_IM</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
