--- a/SEBASTIAN/NST_E2E_COMPOSER_IM/pom.xml
+++ b/SEBASTIAN/NST_E2E_COMPOSER_IM/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.nextworks.nfvmano</groupId>
-    <artifactId>NSTe2eComposer</artifactId>
+    <artifactId>NST_E2E_COMPOSER_IM</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
