Ip address has been replaced by domain Id (in the domain layer catalogue) into the association between IP address and NST ID.

--- a/SEBASTIAN/NSMF_APP/src/main/resources/application.properties
+++ b/SEBASTIAN/NSMF_APP/src/main/resources/application.properties
@@ -59,6 +59,7 @@ catalogue.admin=admin
 
 authentication.enable=yes
 ssoNmroIntegration=true
+nsmf.domainName=nsp_a
 
 flexran.url=""
 ranadapter.url=""
