--- a/SEBASTIAN/NSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/NSFM_SERVICE/pom.xml
@@ -142,6 +142,11 @@
         </dependency>
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NST_E2E_COMPOSER_INTERFACE</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>TranslatorService</artifactId>
             <version>0.0.2-EVE-SNAPSHOT</version>
             <scope>compile</scope>
