--- a/SEBASTIAN/NST_E2E_COMPOSER_INTERFACES/pom.xml
+++ b/SEBASTIAN/NST_E2E_COMPOSER_INTERFACES/pom.xml
@@ -17,11 +17,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.nextworks.nfvmano</groupId>
-    <artifactId>NST_E2E_COMPOSER_SERVICE</artifactId>
+    <artifactId>NST_E2E_COMPOSER_INTERFACE</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -32,8 +31,8 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <name>NST_E2E_COMPOSER_SERVICE</name>
-    <description>Network Service Template Composer Service</description>
+    <name>NST_E2E_COMPOSER_INTERFACE</name>
+    <description>Define Nst end to end composer messages</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -74,6 +73,13 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>CommonElements</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -81,17 +87,7 @@
             <artifactId>NST_E2E_COMPOSER_IM</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>it.nextworks.nfvmano</groupId>
-            <artifactId>NST_E2E_COMPOSER_INTERFACE</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
-        </dependency>
 
-        <dependency>
-            <groupId>it.nextworks.nfvmano</groupId>
-            <artifactId>DomainLayerCatalogue</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
 
@@ -105,14 +101,4 @@
     </build>
 
 
-
 </project>
-
-
-
-
-
-
-
-
-
