--- a/SEBASTIAN/VSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/VSFM_SERVICE/pom.xml
@@ -130,6 +130,16 @@
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NST_E2E_COMPOSER_SERVICE</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>DomainLayerCatalogue</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
