Update test: added NST on boarding on multidomain resulting in advertisement by these ones to the DSP.

--- a/SEBASTIAN/SLICER_E2E_TESTS/pom.xml
+++ b/SEBASTIAN/SLICER_E2E_TESTS/pom.xml
@@ -32,6 +32,16 @@
           <version>0.0.2-SNAPSHOT</version>
       </dependency>
 
+      <dependency>
+          <groupId>it.nextworks.nfvmano</groupId>
+          <artifactId>NSFM_SERVICE</artifactId>
+          <version>0.0.2-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+          <groupId>it.nextworks.nfvmano</groupId>
+          <artifactId>DomainLayerCatalogue</artifactId>
+          <version>0.0.2-SNAPSHOT</version>
+      </dependency>
 
   </dependencies>
   
