--- a/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
+++ b/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-
-spring.datasource.url= jdbc:postgresql://localhost:5432/sebastian2
+spring.datasource.url= jdbc:postgresql://localhost:5432/empty_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 ##BINDING TOMCAT ON MANAGEMENT IP ADDRESS
 #server.address=
-server.port=8081
+server.port=8082
 
 spring.rabbitmq.host=localhost
 
@@ -19,14 +18,14 @@ sebastian.localTmpDir=/tmp
 
 sebastian.admin=admin
 
-nfvo.catalogue.type=TIMEO
+#nfvo.catalogue.type=TIMEO
 #nfvo.catalogue.type=OSM
-#nfvo.catalogue.type=DUMMY
+nfvo.catalogue.type=DUMMY
 #nfvo.catalogue.type=LOGGING
 
 #nfvo.lcm.type=TIMEO
-#nfvo.lcm.type=OSM
-nfvo.lcm.type=DUMMY
+nfvo.lcm.type=NMRO
+#nfvo.lcm.type=DUMMY
 #nfvo.lcm.type=LOGGING
 
 #not used here
@@ -34,12 +33,13 @@ nfvo.lcm.notification.url=
 
 nfvo.lcm.polling=10
 
-
 nfvo.catalogue.address=10.20.8.25
-nfvo.lcm.address=10.20.8.25
+nfvo.lcm.address=10.30.8.76
 
-#nfvogui.type=TIMEO
-nfvogui.type=NONE
+vsmf.notifications.url=http://10.30.8.54:8081
+
+nfvogui.type=TIMEO
+#nfvogui.type=NONE
 
 nfvogui.address=localhost
 nfvogui.port=80
@@ -51,12 +51,15 @@ arbitrator.type=BASIC
 vertical.network.communication=LOCAL
 
 #polling period for TIMEO NFVO operations in seconds
-sebastian.nfvo.timeo.polling=20
-#nfvo.catalogue.username=test
-#nfvo.catalogue.password=test
-#nfvo.catalogue.project=test
+sebastian.nfvo.timeo.polling=10
+nfvo.catalogue.username=admin
+nfvo.catalogue.password=test
+nfvo.catalogue.project=test
 catalogue.admin=admin
 
 authentication.enable=yes
-nsmf.restnbi.url=http://10.30.8.64:8082
-logging.level.it.nextworks.nfvmano=DEBUG
+ssoNmroIntegration=true
+nsmf.domainName=nsp_a
+
+flexran.url=""
+ranadapter.url=""
