Decoupled PnpCommunicationService from Nsmf and created dependency from NSMF_SERVICE and VSMF_SERVICE both.

--- a/SEBASTIAN/VSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/VSFM_SERVICE/pom.xml
@@ -129,6 +129,11 @@
             <artifactId>DomainLayerCatalogue</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>PP_SERVICE</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
