Refactoring: removed useless code, useless files and useless import.

--- a/SEBASTIAN/NSMF_APP/config/application.properties
+++ b/SEBASTIAN/NSMF_APP/config/application.properties
@@ -1,26 +1,23 @@
-###GENERIC PROPERTIES###
 spring.datasource.url= jdbc:postgresql://localhost:5432/sebastian_nsp
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 ##BINDING TOMCAT ON MANAGEMENT IP ADDRESS
 #server.address=
 server.port=8082
+
+spring.rabbitmq.host=localhost
+
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto = update
-spring.rabbitmq.host=localhost
-translator.type=BASIC
-arbitrator.type=BASIC
-vertical.network.communication=LOCAL
-sebastian.localTmpDir=/tmp
-nsmf.domainName=nsp_a
 
-###SECURITY PROPERTIES###
 # Available: BCRYPT - NOOP
 security.passwordEncoder=BCRYPT
-sebastian.admin=admin
-authentication.enable=yes
 
-###NFVO PROPERTIES###
+sebastian.localTmpDir=/tmp
+
+sebastian.admin=admin
+
 #nfvo.catalogue.type=TIMEO
 #nfvo.catalogue.type=OSM
 nfvo.catalogue.type=NMRO
@@ -33,43 +30,44 @@ nfvo.lcm.type=NMRO
 #nfvo.lcm.type=LOGGING
 
 #not used here
-nfvo.lcm.notification.url=""
+nfvo.lcm.notification.url=
+
 nfvo.lcm.polling=10
+
 nfvo.catalogue.address=10.30.8.54
 nfvo.lcm.address=10.30.8.54
+
+vsmf.notifications.url=http://10.30.8.54:8081
+
+nfvogui.type=TIMEO
+#nfvogui.type=NONE
+
+nfvogui.address=localhost
+nfvogui.port=80
+
+translator.type=BASIC
+arbitrator.type=BASIC
+vertical.network.communication=LOCAL
+
+#polling period for TIMEO NFVO operations in seconds
+sebastian.nfvo.timeo.polling=10
 nfvo.catalogue.username=admin
 nfvo.catalogue.password=test
 nfvo.catalogue.project=test
 catalogue.admin=admin
 
-###NOTIFICATION###
-vsmf.restnbi.url=http://10.30.8.54:8081
-###NFVO GUI###
-#nfvogui.type=TIMEO
-nfvogui.type=NONE
-nfvogui.address=localhost
-nfvogui.port=80
+authentication.enable=yes
+ssoNmroIntegration=true
+nsmf.domainName=nsp_a
 
-###TIMEO###
-#polling period for TIMEO NFVO operations in seconds
-sebastian.nfvo.timeo.polling=20
-
-###P&P###
-plugAndPlay.hostname=http://10.30.8.54:50001
-
-###RAN###
 flexran.url=""
 ranadapter.url=""
-flexran.enodeB=-1
-
-###LLMEC###
+plugAndPlay.hostname=http://10.30.8.54:50001
 llmec.hostname=""
 llmecAdapter.hostname=""
 
-###CPSR###
-cpsrBaseUrl=""
-
-###TESTING ONLY###
+simulateLlMec=true
 simulateRan=true
-simulateLlMec=false
 fakeNetworkSlice=false
+cpsrBaseUrl=http://10.8.202.11:8080
+skipAuth=false
