--- a/SEBASTIAN/VSMF_APP/config/application.properties
+++ b/SEBASTIAN/VSMF_APP/config/application.properties
@@ -1,25 +1,23 @@
-###GENERIC PROPERTIES###
 spring.datasource.url= jdbc:postgresql://localhost:5432/sebastian_dsp
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 ##BINDING TOMCAT ON MANAGEMENT IP ADDRESS
 #server.address=
 server.port=8081
+
+spring.rabbitmq.host=localhost
+
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto = update
-spring.rabbitmq.host=localhost
-translator.type=BASIC
-arbitrator.type=BASIC
-vertical.network.communication=LOCAL
-sebastian.localTmpDir=/tmp
 
-###SECURITY PROPERTIES###
 # Available: BCRYPT - NOOP
 security.passwordEncoder=BCRYPT
-sebastian.admin=admin
-authentication.enable=yes
 
-###NFVO PROPERTIES###
+#sebastian.localTmpDir=/tmp
+
+sebastian.admin=admin
+
 #nfvo.catalogue.type=TIMEO
 #nfvo.catalogue.type=OSM
 nfvo.catalogue.type=DUMMY
@@ -32,42 +30,40 @@ nfvo.lcm.type=NMRO
 
 #not used here
 nfvo.lcm.notification.url=
+
 nfvo.lcm.polling=60
-nfvo.catalogue.address=""
-nfvo.lcm.address=""
+
+
+nfvo.catalogue.address=10.30.8.54
+nfvo.lcm.address=10.30.8.54
+
+#nfvogui.type=TIMEO
+nfvogui.type=NONE
+
+nfvogui.address=localhost
+nfvogui.port=80
+
+translator.type=BASIC
+
+arbitrator.type=BASIC
+
+vertical.network.communication=LOCAL
+
+#polling period for TIMEO NFVO operations in seconds
+sebastian.nfvo.timeo.polling=20
 nfvo.catalogue.username=admin
 #nfvo.catalogue.password=test
 #nfvo.catalogue.project=test
 catalogue.admin=admin
 
-###NOTIFICATION###
-nsmf.restnbi.url=http://10.30.8.54:8082
-###NFVO GUI###
-#nfvogui.type=TIMEO
-nfvogui.type=NONE
-nfvogui.address=localhost
-nfvogui.port=80
-
-###TIMEO###
-#polling period for TIMEO NFVO operations in seconds
-sebastian.nfvo.timeo.polling=20
-
-###P&P###
-plugAndPlay.hostname=http://10.30.8.54:50001
-
-###RAN###
+authentication.enable=yes
+nsmf.restnbi.url=http://127.0.0.1:8082
+ssoNmroIntegration=true
 flexran.url=""
 ranadapter.url=""
-flexran.enodeB=-1
-
-###LLMEC###
+plugAndPlay.hostname=""
 llmec.hostname=""
 llmecAdapter.hostname=""
-
-###CPSR###
-cpsrBaseUrl=""
-
-###TESTING ONLY###
-simulateRan=false
-simulateLlMec=false
-fakeNetworkSlice=false
+ran.hostname=""
+simulateLlMec=true
+simulateRan=true
