--- a/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
+++ b/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
@@ -15,51 +15,30 @@ spring.jpa.hibernate.ddl-auto=create-drop
 security.passwordEncoder=BCRYPT
 
 sebastian.localTmpDir=/tmp
-
 sebastian.admin=admin
 
-#nfvo.catalogue.type=TIMEO
-#nfvo.catalogue.type=OSM
-nfvo.catalogue.type=DUMMY
-#nfvo.catalogue.type=LOGGING
+##Configuration about the DSP and NSPs addresses
+dsp.address=10.30.8.54
+nspOne.address=10.30.8.76
+nspTwo.address=10.30.8.54
 
-#nfvo.lcm.type=TIMEO
-nfvo.lcm.type=NMRO
-#nfvo.lcm.type=DUMMY
-#nfvo.lcm.type=LOGGING
+multidomainInstantiation=true
+verticalSliceTermination=true
 
-#not used here
-nfvo.lcm.notification.url=
+##Actuation request that can be performed after a successful instantiation
+handoverActuation=false
+qosActuation=false
+redirectActuation=true
+setRanSlicePriorityActuation=false
 
-nfvo.lcm.polling=10
 
-nfvo.catalogue.address=10.20.8.25
-nfvo.lcm.address=10.30.8.76
+##For KPI numberOfInstantiateAndTerminateCycles is greater than 1
+numberOfInstantiateAndTerminateCycles=1
 
-vsmf.notifications.url=http://10.30.8.54:8081
+## Depending on what you would like to instantiate, chose the correct one
+#instantiationScenario=ONLY_PP
+#instantiationScenario=PP_NFV_NO_RAN
+instantiationScenario=PP_NFV_RAN
 
-nfvogui.type=TIMEO
-#nfvogui.type=NONE
-
-nfvogui.address=localhost
-nfvogui.port=80
-
-translator.type=BASIC
-
-arbitrator.type=BASIC
-
-vertical.network.communication=LOCAL
-
-#polling period for TIMEO NFVO operations in seconds
-sebastian.nfvo.timeo.polling=10
-nfvo.catalogue.username=admin
-nfvo.catalogue.password=test
-nfvo.catalogue.project=test
-catalogue.admin=admin
-
-authentication.enable=yes
-ssoNmroIntegration=true
-nsmf.domainName=nsp_a
-
-flexran.url=""
-ranadapter.url=""
+##The waiting time after the NST to be on boarded on order to be advertised. On dell test bed put a value around 50 because connectivity issues.
+waitingTimeAfterNstOnBoarding=1
