Updated JSON files used for instantiating the slice.

--- a/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
+++ b/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=postgres
 
 ##BINDING TOMCAT ON MANAGEMENT IP ADDRESS
 #server.address=
-server.port=8082
+server.port=8085
 
 spring.rabbitmq.host=localhost
 
@@ -20,15 +20,17 @@ sebastian.admin=admin
 ##Configuration about the DSP and NSPs addresses
 dsp.address=10.30.8.54
 nspOne.address=10.30.8.76
+#dsp.address=127.0.0.1
+#nspOne.address=127.0.0.1
 nspTwo.address=10.30.8.54
 
-multidomainInstantiation=true
+multidomainInstantiation=false
 verticalSliceTermination=true
 
 ##Actuation request that can be performed after a successful instantiation
 handoverActuation=false
 qosActuation=false
-redirectActuation=true
+redirectActuation=false
 setRanSlicePriorityActuation=false
 
 
