Updated JSON for the Demo.

--- a/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
+++ b/SEBASTIAN/SLICER_TESTER/src/main/resources/application.properties
@@ -25,7 +25,7 @@ nspOne.address=10.30.8.76
 nspTwo.address=10.30.8.54
 
 multidomainInstantiation=false
-verticalSliceTermination=true
+verticalSliceTermination=false
 
 ##Actuation request that can be performed after a successful instantiation
 handoverActuation=false
@@ -35,12 +35,14 @@ setRanSlicePriorityActuation=false
 
 
 ##For KPI numberOfInstantiateAndTerminateCycles is greater than 1
-numberOfInstantiateAndTerminateCycles=1
+numberOfInstantiateAndTerminateCycles=0
 
 ## Depending on what you would like to instantiate, chose the correct one
 #instantiationScenario=ONLY_PP
 #instantiationScenario=PP_NFV_NO_RAN
+#instantiationScenario=PP_RAN
 instantiationScenario=PP_NFV_RAN
+
 
 ##The waiting time after the NST to be on boarded on order to be advertised. On dell test bed put a value around 50 because connectivity issues.
 waitingTimeAfterNstOnBoarding=1
