--- a/INSTALL/vertical-slicer-docker/sebastian/sebastian_application.properties
+++ b/INSTALL/vertical-slicer-docker/sebastian/sebastian_application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://10.30.8.69:5432/sebastian
+spring.datasource.url= jdbc:postgresql://postgres:95432/sebastian
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -6,7 +6,7 @@ spring.datasource.password=postgres
 #server.address=localhost
 server.port=8082
 
-spring.rabbitmq.host=10.30.8.69
+spring.rabbitmq.host=rabbitmq
 
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto = update
@@ -18,17 +18,19 @@ sebastian.localTmpDir=/tmp
 
 sebastian.admin=admin
 
-nfvo.catalogue.type=OSM
-nfvo.catalogue.address=https://10.30.8.75:9999
+nfvo.catalogue.type=DUMMY
+nfvo.catalogue.address=https://localhost:9999
 
-nfvo.lcm.type=OSM
-nfvo.lcm.address=https://10.30.8.75:9999
+nfvo.lcm.type=DUMMY
+nfvo.lcm.address=https://localhost:9999
 nfvo.lcm.username=admin
 nfvo.lcm.password=admin
 nfvo.lcm.project=admin
-nfvo.lcm.vim=0d71d5cc-5889-42b5-ba1d-0d6569302edb
+#FOR OSM nfvo driver
+nfvo.lcm.vim=vim-id 
 
 #vsmf.notifications.url=http://localhost:8082
 
 translator.type=BASIC
 arbitrator.type=BASIC
+
