--- a/SEBASTIAN/VSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/VSFM_SERVICE/pom.xml
@@ -115,6 +115,11 @@
            <version>0.0.2-SNAPSHOT</version>
 
        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
        <!--
        <dependency>
@@ -152,6 +157,17 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NsTemplatesCatalogue</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
